# Mockingbird

./: .env.example  .gitignore  CLAUDE.md  README.md
.claude/: launch.json  settings.json
.claude/hooks/: guard.sh  ruff-format.sh
.claude/skills/respond-to-copilot-review/: SKILL.md
.claude/skills/respond-to-copilot-review/scripts/: list_copilot_threads.sh  request_copilot_review.sh
.github/workflows/: ci.yml
agents/: AGENTS.md  audio-engine.agent.md  frontend.agent.md  gateway.agent.md  inference.agent.md  infrastructure.agent.md
docs/: PRODUCT_SPEC.md  ROADMAP.md  m4b-review-skipped-fixes.md
docs/contracts/: voice_clone_multipart.json
frontend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
frontend/app/: config.py  main.py
frontend/static/css/: app.css
frontend/static/js/: auth.js
frontend/static/js/audio-engine/: audio-engine.js  index.js  recorder.js  websocket-worker.js
frontend/static/js/audio-engine/processors/: voice-capture.worklet.js  voice-playback.worklet.js
frontend/static/js/audio-engine/utils/: audio-utils.js  metrics.js
frontend/templates/: base.html
frontend/templates/pages/: dashboard.html  dialer.html  login.html  monitor.html  settings.html  studio.html
frontend/tests/: test_pages.py
gateway/: .env.example  Dockerfile  alembic.ini  pyproject.toml
gateway/alembic/: env.py  script.py.mako
gateway/alembic/versions/: 7a23be3fa599_user_table.py  a8f4c2d7e1b3_callrecord_table.py  b3f1a6c9d2e4_voice_voice_id_unique.py  c4d2f8a17b9e_voice_user_id.py  ca561f6a0421_voicemodel_table.py  d1e5a9c3f7b2_user_email_not_unique.py  e9658781796e_voice_table.py
gateway/app/: config.py  logging.py  main.py  metrics.py
gateway/app/auth/: __init__.py  dependencies.py  jwt.py  routes.py  supabase.py
gateway/app/calls/: __init__.py  bridge.py  media.py  routes.py  telephony.py  twilio.py
gateway/app/db/: models.py  session.py
gateway/app/inference/: client.py  http.py
gateway/app/rate_limit/: __init__.py  limiter.py
gateway/app/settings/: __init__.py  routes.py
gateway/app/training/: __init__.py  celery_app.py  db.py  routes.py  tasks.py
gateway/app/voices/: __init__.py  routes.py
gateway/app/websocket/: auth.py  handler.py  protocol.py
gateway/scripts/: gen_proto.sh
gateway/tests/: test_auth.py  test_calls.py  test_contracts.py  test_db.py  test_metrics.py  test_rate_limit.py  test_settings.py  test_telephony.py  test_training.py  test_tuning.py  test_voices.py  test_ws_echo.py  test_ws_twilio.py  test_ws_voice.py
inference/: Dockerfile  README.md  pyproject.toml
inference/app/: config.py  dsp.py  health.py  logging.py  metrics.py  server.py  training.py  tuning.py  voices.py
inference/app/backends/: __init__.py  base.py  cartesia.py  passthrough.py  self_hosted.py
inference/app/export/: __init__.py  clone.py  hd_train.py  openvoice_onnx.py  openvoice_templates.py  rvc_templates.py
inference/app/export/openvoice/: __init__.py  commons.py  models.py  modules.py
inference/app/export/rvc/: __init__.py  compose.py
inference/app/proto_gen/: audio_pb2.py  audio_pb2_grpc.py
inference/scripts/: export_openvoice_onnx.py  export_rvc_onnx.py  gen_proto.sh  self_hosted_bench.py  voice_changer_spike.py
inference/tests/: test_backends.py  test_contracts.py  test_dsp.py  test_export_openvoice.py  test_export_rvc.py  test_grpc.py  test_hd_train.py  test_metrics.py  test_self_hosted.py  test_tuning.py  test_voices.py
infrastructure/: docker-compose.yml
infrastructure/monitoring/: prometheus.yml
infrastructure/monitoring/grafana/dashboards/: latency.json
infrastructure/monitoring/grafana/provisioning/dashboards/: dashboards.yml
infrastructure/monitoring/grafana/provisioning/datasources/: prometheus.yml
infrastructure/scripts/: provision_cloud_gpu.sh
proto/: audio.proto
scripts/: dev.sh
