[project]
name = "mockingbird-inference"
version = "0.1.0"
description = "Mockingbird inference service — gRPC voice conversion with a swappable backend."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.1",
    "grpcio>=1.68.0",
    "httpx>=0.28.1",
    "numpy>=2.1.0",
    "pydantic-settings>=2.14.2",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.68.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.ruff]
line-length = 100
# Generated gRPC stubs: neither format nor lint them.
extend-exclude = ["app/proto_gen"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
# Generated gRPC stubs are not ours to lint.
"app/proto_gen/*" = ["ALL"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
