[project]
name = "mockingbird-inference"
version = "0.1.0"
description = "Mockingbird inference service — gRPC voice conversion with a swappable backend."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.40",
    "fastapi>=0.138.1",
    "grpcio>=1.81.1",
    "httpx>=0.28.1",
    "numpy>=2.1.0",
    "onnxruntime>=1.27.0",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.81.1",
    "onnx>=1.22.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
# Generated gRPC stubs: neither format nor lint them.
extend-exclude = ["app/proto_gen"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

# FastAPI's dependency-injection markers (Depends/File/Form/...) are
# call-in-default by design; B008 must not flag them.
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.File", "fastapi.Form"]

[tool.ruff.lint.per-file-ignores]
# Generated gRPC stubs are not ours to lint.
"app/proto_gen/*" = ["ALL"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
